--- a/index.yaml
+++ b/index.yaml
@@ -9,3 +9,9 @@ indexes:
 # manually, move them above the marker line.  The index.yaml file is
 # automatically uploaded to the admin console when you next deploy
 # your application using appcfg.py.
+
+- kind: Solution
+  properties:
+  - name: blob_info
+  - name: creation
+    direction: desc
